--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
-
+    testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 }
 
