Renamed output jar for github actions

--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,9 @@ repositories {
     }
     maven { url = "https://jitpack.io" }
 }
-
+configurations {
+    jar.archiveName = 'herbocraft.jar'
+}
 processResources {
     inputs.property "version", project.version
 
