Fidex env variable errors

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+      - name: Extract tag name
+        id: tag
+        uses: actions/github-script@0.2.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            return context.payload.ref.replace(/\/refs\/tags\//, '');
       - name: Generate changelog
         id: changelog
         uses: heinrichreimer/github-changelog-generator-action@v2.1.1
@@ -39,8 +46,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{ steps.tag.outputs.result }}
+          release_name: Release ${{ steps.tag.outputs.result }}
           body: ${{ steps.changelog.outputs.changelog }}
           draft: false
           prerelease: false
@@ -52,11 +59,11 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: build/libs/herbocraft.jar
-          asset_name: jerbocraft-${{ github.ref }}.jar
+          asset_name: jerbocraft-${{ steps.tag.outputs.result }}.jar
           asset_content_type: application/java-archive
       - name: Rename File
         id: rename-file
-        run: mv build/libs/herbocraft.jar build/libs/herbocraft-${{ github.ref }}.jar
+        run: mv build/libs/herbocraft.jar build/libs/herbocraft-${{ steps.tag.outputs.result }}.jar
       - name: Publish to curseforge
         uses: itsmeow/curseforge-upload@v2
         with:
