Pretty big update
Added crafts for items
Added two new Turrets
Added crafting items
Added seeds for plants

--- a/build.gradle
+++ b/build.gradle
@@ -26,15 +26,15 @@ dependencies {
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0-nightly.1.16-pre4"
-    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0-nightly.1.16-pre4"
+    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0"
     // Adds an implementation dependency on the entity module
-    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0-nightly.1.16-pre4"
-    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0-nightly.1.16-pre4"
-    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0-nightly.1.16-pre4"
-    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0-nightly.1.16-pre4"
-    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0-nightly.1.16-pre4"
-    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0-nightly.1.16-pre4"
+    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0"
+    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0"
+    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0"
     modCompile "com.github.vini2003:spinnery:${project.spinnery_version}"
     include "com.github.vini2003:spinnery:${project.spinnery_version}"
     modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
