--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,4 @@ archives_base_name=herbocraft
 fabric_version=0.13.1+build.370-1.16
 spinnery_version=3.0.39+fabric-1.16.x
 modmenu_version = 1.12.1+build.15
+patchouli_version = 1.16-37.15-FABRIC
