--- a/build.gradle
+++ b/build.gradle
@@ -26,20 +26,34 @@ dependencies {
     modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
     testImplementation 'com.google.code.findbugs:jsr305:3.0.2'
     modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0"
-    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.4.0"
+
+    modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.5.1"
+    include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-base:2.5.1"
     // Adds an implementation dependency on the entity module
+
+    /*
     modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0"
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-entity:2.4.0"
     modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0"
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-item:2.4.0"
     modCompile "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0"
     include "io.github.onyxstudios.Cardinal-Components-API:cardinal-components-block:2.4.0"
-    modCompile "com.github.vini2003:spinnery:${project.spinnery_version}"
-    include "com.github.vini2003:spinnery:${project.spinnery_version}"
-    modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
-    include "io.github.prospector:modmenu:${project.modmenu_version}"
-    modImplementation "vazkii.patchouli:Patchouli_1.16-fabric:${project.patchouli_version}"
+    */
+    modCompile("com.github.vini2003:spinnery:${project.spinnery_version}"){
+        exclude module:"fabric-api"
+    }
+    include("com.github.vini2003:spinnery:${project.spinnery_version}"){
+        exclude module:"fabric-api"
+    }
+    modImplementation("io.github.prospector:modmenu:${project.modmenu_version}"){
+        exclude module:"fabric-api"
+    }
+    include("io.github.prospector:modmenu:${project.modmenu_version}"){
+        exclude module:"fabric-api"
+    }
+    modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}"){
+        exclude module:"fabric-api"
+    }
     //modRuntime ("com.github.Chocohead:Data-Breaker-Lower:24be1a2")
 
     /* this will expose the dependency to anyone building against your mod. You might
